2006-04-06  David Reveman  <davidr@novell.com>

	* plugins/switcher.c (switchDamageWindowRect)
	(switchWindowRemove): Update switcher list even when screen isn't
	grabbed.

	* plugins/switcher.c (switchDamageWindowRect):
	* include/compiz.h:
	* src/event.c (handleEvent):
	* src/window.c:	Made it possible to select if window should be
	stacked above fullscreen windows or not.
	
	* src/window.c (findSiblingBelow): Only find a fullscreen sibling
	if aboveFs is TRUE.
	(activateWindow): Allow stacking of window above fullscreen windows
	when being activated.

2006-04-05  David Reveman  <davidr@novell.com>

	* plugins/water.c (fboEpilogue): Reset raster position. Avoids
	an FBO/raster-position issue found in newer nvidia drivers.

	* plugins/move.c: Add constrain_y option that constrains window
	movement so that top of window is always visible (on by default).

	* src/event.c (handleEvent): Change active window property even though
	it's not different than the window we currently have as active.

	* src/window.c (moveInputFocusToWindow): Set focus even though
	the window is considered the active window.

2006-04-03  David Reveman  <davidr@novell.com>

	* plugins/water.c: Use char everywhere instead.
	Fix offset direction (P-a Bäckström).
	Add offset scale option.

	* plugins/water.c: (loadFragmentProgram): GLubyte -> const GLbyte.
	(loadWaterProgram): char -> GLbyte.
	(loadBumpMapProgram): char -> GLbyte.
	Use char everywhere.

	* configure.ac: Bump version to 0.0.8.

	* plugins/water.c: Add simple rain effect.
	(loadFragmentProgram): Clear any previous error.

	* src/display.c: Change so that timeouts are not only triggered
	when we're idle.

2006-04-02  David Reveman  <davidr@novell.com>

	* plugins/water.c: Add scale and bias to normal so that light can be
	computed correclty. Offset texture coordinates for nice refraction
	effect. (P-a Bäckström)
	(waterDrawWindowTexture): Add scaling after setting up texture
	coordinate generation.